# mca

./: CMakeLists.txt  MCA.sln  README.md
GUI_MFC/: CameraInfo.cpp  CameraInfo.h  CameraView1.cpp  CameraView1.h  CameraView2.cpp  CameraView2.h  ChildFrm.cpp  ChildFrm.h  ConfigView.cpp  ConfigView.h  GrabResult.cpp  GrabResult.h  GuiSample_1394.vcproj  GuiSample_Usb.vcxproj  GuiSample_Usb.vcxproj.filters  ImageResult.cpp  ImageResult.h  MCA.cpp  MCA.h  MCA.rc  MCADoc.cpp  MCADoc.h  MCAView.cpp  MCAView.h  MCA_Usb.vcproj  MCA_Usb.vcxproj  MCA_Usb.vcxproj.filters  MainFrm.cpp  MainFrm.h  ManageDock.cpp  ManageDock.h  PylonStringHelpers.cpp  PylonStringHelpers.h  Resource.h  resource.h  stdafx.cpp  stdafx.h
GUI_MFC/res/: GuiSample.rc2  MCA.rc2
RecordVideoWithOpenCV/: CMakeLists.txt  main.cpp
RecordVideoWithOpenCV/cmake/: FindPylon.cmake
Redist/: ProducerU3V.cti  Readme.txt
mca/: CMakeLists.txt
mca/cmake-modules/: FindOpenCV.cmake
mca/src/: CMakeLists.txt  mca.cpp  mca.h
record/: main.cpp  record.sln  record.vcxproj
vs/: mca.sln  mca.vcxproj
